--- a/css/style.css
+++ b/css/style.css
@@ -71,3 +71,37 @@ header
     border: none;
     text-transform: uppercase;
 }
+
+.hero 
+{
+    width: 100%;
+    height: 630px;
+    background-image: url(../images/desktop/image-header.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: bottom;
+}
+
+.hero-center
+{
+    width: 50%;
+    margin: auto;
+}
+
+.hero-center h1 
+{
+    font-size: 45px;
+    font-family: 'Fraunces', serif;
+    text-transform: uppercase;
+    color: var(--White);
+    text-align: center;
+    letter-spacing: 8.5px;
+    padding-top: 50px;
+}
+
+.hero-flecha img
+{
+    display: block;
+    margin: auto;
+    margin-top: 100px;
+}
