--- a/css/style.css
+++ b/css/style.css
@@ -21,24 +21,27 @@
     --White: hsl(0, 0%, 100%);
 }
 
+/********HEADER********/
 header
 {
     width: 100%;
     height: 100px;
     background-color: #3dbeff;
+    display: inline-block;
 }
 
 .header-container
 {
     display: grid;
     grid-template-columns: 60% 40%;
-    padding-top: 25px;
+    margin-top: 25px;
 }
 
 .header-container img 
 {
-    margin-left: 30px;
     height: 30px;
+    margin-left: 50px;
+    margin-top: 10px;
 }
 
 .header-menu
@@ -72,6 +75,14 @@ header
     text-transform: uppercase;
 }
 
+.button:hover
+{
+    background-color: var(--Dark-blue);
+    color: var(--White);
+}
+
+/********HERO********/
+
 .hero 
 {
     width: 100%;
@@ -80,12 +91,14 @@ header
     background-size: cover;
     background-repeat: no-repeat;
     background-position: bottom;
+    display: inline-block;
 }
 
 .hero-center
 {
     width: 50%;
     margin: auto;
+    margin-top: 50px;
 }
 
 .hero-center h1 
@@ -96,12 +109,15 @@ header
     color: var(--White);
     text-align: center;
     letter-spacing: 8.5px;
-    padding-top: 50px;
+}
+
+.hero-flecha
+{
+    margin-top: 100px;
 }
 
 .hero-flecha img
 {
     display: block;
     margin: auto;
-    margin-top: 100px;
 }
