--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,13 @@
     box-sizing: border-box;
 }
 
+body
+{
+    min-height: 100vh;
+    font-family: 'Barlow', sans-serif;
+    overflow-x: hidden;
+}
+
 :root
 {
     --Soft-red: hsl(7, 99%, 70%);
@@ -22,102 +29,148 @@
 }
 
 /********HEADER********/
-header
+header 
 {
-    width: 100%;
-    height: 100px;
-    background-color: #3dbeff;
-    display: inline-block;
-}
-
-.header-container
-{
-    display: grid;
-    grid-template-columns: 60% 40%;
-    margin-top: 25px;
-}
-
-.header-container img 
-{
-    height: 30px;
-    margin-left: 50px;
-    margin-top: 10px;
-}
-
-.header-menu
-{
-    display: grid;
-    grid-template-columns: 60% 40%;
-}
-
-.header-ul
-{
-    margin-top: 14px;
-}
-
-.header-ul li
-{
-    display: inline-block;
-    color: var(--White);
-    font-size: 16px;
-    font-family: 'Barlow', sans-serif;
-    margin-right: 30px;
-}
-
-.button
-{
-    padding: 15px 20px;
-    border-radius: 25px;
-    background-color: var(--White);
-    font-size: 14px;
-    font-family: 'Fraunces', serif;
-    border: none;
-    text-transform: uppercase;
-}
-
-.button:hover
-{
-    background-color: var(--Dark-blue);
-    color: var(--White);
-}
-
-/********HERO********/
-
-.hero 
-{
-    width: 100%;
-    height: 630px;
+    width: 100vw;
+    height: 100vh;
+    position: relative;
     background-image: url(../images/desktop/image-header.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
     background-position: bottom;
-    display: inline-block;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
-
-.hero-center
+  
+.header-content > img 
 {
-    width: 50%;
-    margin: auto;
-    margin-top: 50px;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    position: absolute;
 }
-
-.hero-center h1 
+  
+.header-content > .content 
 {
-    font-size: 45px;
-    font-family: 'Fraunces', serif;
-    text-transform: uppercase;
+    position: absolute;
+    display: grid;
+    gap: 36px;
+    place-items: center;
+    left: 50%;
+    top: 40%;
+    transform: translate(-50%,-50%);
+}
+  
+.header-content > .content h1 
+{
+    font-family: 'Fraunces', sans-serif;
+    font-weight: 800;
     color: var(--White);
-    text-align: center;
-    letter-spacing: 8.5px;
+    font-size: 56px;
+    text-transform: uppercase;
+    letter-spacing: 8px;
+    white-space: nowrap;
 }
-
-.hero-flecha
+  
+.header-content > .content > img 
 {
-    margin-top: 100px;
+    height: 120px;
+    width: auto;
+    animation: arrow-down-move 1s ease-in infinite alternate;
 }
-
-.hero-flecha img
+  
+@keyframes arrow-down-move 
+{
+    to {
+      transform: translateY(40px);
+    }
+  }
+  
+.toolbar
+{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 32px;
+    position: absolute;
+    width: 100%;
+    z-index: 1;
+}
+  
+.toolbar > img.logo 
+{
+    width: 200px;
+    min-width: 200px;
+}
+  
+.toolbar nav ul 
+{
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    display: flex;
+    align-items: center;
+    gap: 48px;
+}
+  
+.toolbar nav li a 
 {
     display: block;
-    margin: auto;
+    cursor: pointer;
+    position: relative;
+    color: var(--White);
+    font-size: 18px;
+    text-decoration: none;
 }
+
+.toolbar nav li a:not(.contact)::before 
+{
+    content: '';
+    position: absolute;
+    bottom: -6px;
+    height: 3px;
+    border-radius: 2px;
+    width: 100%;
+    transition: transform 0.3s;
+    background-color: currentColor;
+    transform: scaleX(0);
+    transform-origin: right;
+}
+  
+.toolbar nav li a:not(.contact):hover::before 
+{
+    transform: scaleX(1);
+    transform-origin: left;
+}
+  
+.toolbar nav li a.contact 
+{
+    font-family: "Fraunces", sans-serif;
+    color: var(--Verydark);
+    background-color: var(--White);
+    padding: 16px 24px;
+    border-radius: 24px;
+    text-transform: uppercase;
+    font-size: 14px;
+    transition: 0.2s;
+}
+
+.toolbar nav li a.contact:hover 
+{
+    color: var(--White);
+    background-color: rgba(255,255,255,0.3);
+}
+  
+.toolbar > button.hamburger 
+{
+    display: none;
+    width: 24px;
+    cursor: pointer;
+    background-color: transparent;
+    border: none;
+}
+  
+.toolbar > button.hamburger svg 
+{
+    width: 100%;
+    height: 100%;
+}
+  
