--- a/css/style.css
+++ b/css/style.css
@@ -253,3 +253,57 @@ header
 {
     opacity: 1;
 }
+
+/********SERVICES********/
+section#services 
+{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+  
+.service 
+{
+    position: relative;
+}
+  
+.service > img 
+{
+    position: absolute;
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+}
+  
+.service-text 
+{
+    padding: 350px 25% 5%;
+    text-align: center;
+}
+  
+.service-text.graphic-design 
+{
+    color: var(--Dark-desaturated-cyan);
+}
+  
+.service-text.photography 
+{
+    color: var(--Dark-blue);
+}
+  
+.service-text h2 
+{
+    font-family: 'Fraunces', sans-serif;
+    font-weight: 900;
+    font-size: 32px;
+    text-transform: capitalize;
+}
+
+.service-text p 
+{
+    font-size: 18px;
+    line-height: 28px;
+}
+  
+  
+  
