--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,12 @@ body
     --Dark-grayish-blue: hsl(232, 10%, 55%);
     --Grayish-blue: hsl(210, 4%, 67%);
     --White: hsl(0, 0%, 100%);
+    --Footer-bg: #90d4c5;
+}
+
+.img-mobile 
+{
+    display: none;
 }
 
 /********HEADER********/
@@ -304,6 +310,359 @@ section#services
     font-size: 18px;
     line-height: 28px;
 }
+
+/********TESTIMONIALS********/
+section#testimonials 
+{
+    padding: 10%;
+    background-color: var(--White);
+}
   
+section#testimonials h2 
+{
+    text-align: center;
+    font-family: 'Fraunces', sans-serif;
+    font-size: 22px;
+    text-transform: uppercase;
+    letter-spacing: 5px;
+    color: var(--Grayish-blue);
+    font-weight: 900;
+}
   
+.testimonials-grid 
+{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+}
+  
+.testimonial 
+{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    margin-top: 56px;
+    padding: 0 24px; 
+}
+
+.testimonial > img 
+{
+    height: 70px;
+    width: 70px;
+    border-radius: 50%;
+}
+  
+.testimonial > p 
+{
+    margin-top: 56px;
+    font-size: 18px;
+    line-height: 28px;
+    color: var(--Very-dark-grayish-blue);
+}
+  
+.user-data 
+{
+    margin-top: 56px;
+}
+  
+.user-data p.name 
+{
+    font-family: 'Fraunces', sans-serif;
+    font-size: 18px;
+    font-weight: 900;
+    color: var(--Verydark);
+    margin: 0;
+}
+
+.user-data p.role 
+{
+    color: var(--Grayish-blue);
+    font-size: 16px;
+    margin-top: 14px;
+}
+
+/********PROJECTS********/
+section#projects 
+{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+}
+  
+section#projects img 
+{
+    width: 100%;
+  
+}
+
+/********FOOTER********/
+footer 
+{
+    background-color: var(--Footer-bg);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 72px;
+}
+  
+footer > svg.logo 
+{
+    color: var(--Dark-moderate);
+    width: 160px;
+    height: auto;
+}
+  
+footer ul 
+{
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+}
+  
+footer ul li 
+{
+    cursor: pointer;
+}
+  
+footer ul li a 
+{
+    color: var(--Dark-moderate);
+    transition: 0.2s;
+}
+  
+footer ul li a:hover
+{
+    color: var(--White);
+}
+  
+ul.section-links 
+{
+    gap: 56px;
+    margin-top: 32px;
+}
+  
+ul.section-links li a 
+{
+    font-size: 18px;
+    text-decoration: none;
+}
+  
+ul.social-links 
+{
+    margin-top: 72px;
+    gap: 26px;
+}
+  
+ul.social-links li 
+{
+    font-size: 24px;
+}
+
+/********RESPONSIVE********/
+
+@media screen and (max-width: 500px) 
+{
+    .img-desktop 
+    {
+        display: none;
+    }
+  
+    .img-mobile 
+    {
+        display: block !important;
+    }
+  
+    .toolbar > button.hamburger 
+    {
+        display: block;
+    }
+  
+    .toolbar > nav 
+    {
+        position: absolute;
+        background-color: var(--White);
+        top: 100px;
+        width: calc(100vw - 64px);
+        left: 50%;
+        transform: translateX(-50%);
+        padding: 32px 0;
+        opacity: 0;
+        visibility: hidden;
+        transition: transform 0.5s;
+    }
+  
+    .toolbar > nav.show 
+    {
+        transform: translate(-50%, 10px);
+        opacity: 1;
+        visibility: visible;
+    }
+  
+    .toolbar > nav::before 
+    {
+        position: absolute;
+        content: '';
+        background-color: inherit;
+        height: 30px;
+        width: 25px;
+        clip-path: polygon(0 100%, 100% 100%, 100% 0);
+        right: 0;
+        top: -29px;
+    }
+    
+    .toolbar nav ul 
+    {
+        flex-direction: column;
+        gap: 32px;
+    }
+    
+    .toolbar nav li a 
+    {
+        color: var(--Very-dark-grayish-blue);
+    }
+  
+    .toolbar nav li a.contact 
+    {
+        background-color: var(--Yellow);
+    }
+  
+    .toolbar nav li a.contact:hover 
+    {
+        color: var(--Verydark);
+        background-color: var(--Yellow);
+    }
+  
+    .toolbar > img.logo 
+    {
+        width: 130px;
+        min-width: 130px;
+    }
+  
+    .header-content > .content 
+    {
+        top: 43%;
+    }
+  
+    .header-content > .content h1 
+    {
+        font-size: 36px;
+        white-space: initial;
+        text-align: center;
+        letter-spacing: 5px;
+    }
+  
+    .header-content > .content > img.hidden 
+    {
+        display: none;
+    }
+  
+    .about-row 
+    {
+        grid-template-columns: 1fr;
+    }
+  
+    .about-row:first-of-type > .about-text 
+    {
+        order: 1;
+    }
+  
+    .about-row > .about-text 
+    {
+        padding: 56px 24px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+  
+    .about-row > .about-text > h2 
+    {
+        font-size: 32px;
+        margin: 0;
+    }
+  
+    .about-row > .about-text > p 
+    {
+        margin-bottom: 0;
+    }
+  
+    section#services 
+    {
+        grid-template-columns: 1fr;
+    }
+  
+    .service-text 
+    {
+        padding: 350px 24px 32px;
+    }
+  
+    .service-text h2 
+    {
+        font-size: 28px;
+    }
+  
+    .service-text p 
+    {
+      font-size: 16px;
+      line-height: 26px;
+    }
+  
+    section#testimonials 
+    {
+        padding: 56px 24px;
+    }
+  
+    section#testimonials h2 
+    {
+        font-size: 16px;
+        letter-spacing: 4px;
+        margin-top: 0;
+    }
+  
+    .testimonials-grid 
+    {
+        grid-template-columns: 1fr;
+    }
+  
+    .testimonial 
+    {
+        padding: 0;
+    }
+  
+    .testimonial > p 
+    {
+        margin-top: 24px;
+    }
+  
+    .user-data 
+    {
+        margin-top: 16px;
+    }
+  
+    .user-data p.role 
+    {
+        margin-top: 8px;
+        font-size: 14px;
+    }
+  
+    section#projects 
+    {
+        grid-template-columns: 1fr 1fr;
+    }
+  
+    footer 
+    {
+        padding: 64px 24px 72px;
+    }
+  
+    footer ul.section-links 
+    {
+        margin-top: 48px;
+    }
+  
+    ul.social-links li 
+    {
+        font-size: 22px;
+    }
+  }
   
